// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Run command should execute "@manypkg/basic-fixture-pkg-two start" and exit with 0: stderr 1`] = `""`;

exports[`Run command should execute "@manypkg/basic-fixture-pkg-two start" and exit with 0: stdout 1`] = `
"hello start
"
`;

exports[`Run command should execute "package start" and exit with 1: stderr 1`] = `
"☔️ error an identifier must only match a single package but "package" matches the following packages: 
☔️ error @manypkg/basic-fixture-pkg-one
☔️ error @manypkg/basic-fixture-pkg-two
☔️ error @manypkg/basic-fixture-pkg-two-one
"
`;

exports[`Run command should execute "package start" and exit with 1: stdout 1`] = `""`;

exports[`Run command should execute "package-one start" and exit with 0: stderr 1`] = `""`;

exports[`Run command should execute "package-one start" and exit with 0: stdout 1`] = `
"hello start
"
`;

exports[`Run command should execute "package-one test" and exit with 0: stderr 1`] = `""`;

exports[`Run command should execute "package-one test" and exit with 0: stdout 1`] = `
"testing
"
`;

exports[`Run command should execute "package-three start" and exit with 1: stderr 1`] = `
"☔️ error No matching packages found
"
`;

exports[`Run command should execute "package-three start" and exit with 1: stdout 1`] = `""`;

exports[`Run command should execute "package-two start" and exit with 1: stderr 1`] = `
"☔️ error an identifier must only match a single package but "package-two" matches the following packages: 
☔️ error @manypkg/basic-fixture-pkg-two
☔️ error @manypkg/basic-fixture-pkg-two-one
"
`;

exports[`Run command should execute "package-two start" and exit with 1: stdout 1`] = `""`;

exports[`Run command should execute "package-two-one something" and exit with 1: stderr 1`] = `""`;

exports[`Run command should execute "package-two-one something" and exit with 1: stdout 1`] = `
"Usage Error: Couldn't find a script named "something".

$ yarn run [--inspect] [--inspect-brk] [-T,--top-level] [-B,--binaries-only] [--require #0] <scriptName> ...
"
`;

exports[`Run command should execute "package-two-one start" and exit with 0: stderr 1`] = `""`;

exports[`Run command should execute "package-two-one start" and exit with 0: stdout 1`] = `
"hello start
"
`;

exports[`Run command should execute "packages/package-two start" and exit with 0: stderr 1`] = `""`;

exports[`Run command should execute "packages/package-two start" and exit with 0: stdout 1`] = `
"hello start
"
`;

exports[`Run command should execute "pkg-one start" and exit with 0: stderr 1`] = `""`;

exports[`Run command should execute "pkg-one start" and exit with 0: stdout 1`] = `
"hello start
"
`;

exports[`Run command should execute "pkg-two start" and exit with 1: stderr 1`] = `
"☔️ error an identifier must only match a single package but "pkg-two" matches the following packages: 
☔️ error @manypkg/basic-fixture-pkg-two
☔️ error @manypkg/basic-fixture-pkg-two-one
"
`;

exports[`Run command should execute "pkg-two start" and exit with 1: stdout 1`] = `""`;

exports[`Run command should execute "pkg-two-one start" and exit with 0: stderr 1`] = `""`;

exports[`Run command should execute "pkg-two-one start" and exit with 0: stdout 1`] = `
"hello start
"
`;
